# sourceafis-rust

./: Cargo.toml  LICENSE  NOTICE  README.md
src/: double_point.rs  image.rs  int_point.rs  integers.rs  lib.rs  number.rs  point.rs
